# YOLO-of-RoboMaster-Keypoints-Detection-2023

./: .gitignore  README.md  detect.py  export.py  export_openvino_int8.py  requirements.txt  test.py  train.py
C++_end2end_openvino_detect/: CMakeLists.txt  demo.cpp  openvino_detect.cpp  openvino_detect.h
C++_inference_openvino_kpt/: CMakeLists.txt  README.md  demo_kpt.cpp  yolov7_kpt.cpp  yolov7_kpt.h
C++_inference_openvino_kpt/demo_weight/: demo.mapping  demo.xml
DH_camera_read/: CMakeLists.txt
DH_camera_read/include/: CamWrapper.h  CamWrapperDH.h  DH_CAM.h  DxImageProc.h  GxIAPI.h
DH_camera_read/src/: CamWrapper.cpp  DH_CAM.cpp
cfg/armor/: mobileone-0.5-armor.yaml  shufflenet-0.5-armor.yaml  shufflenet-SImAM-0.25-armor.yaml  shufflenet-SImAM-0.5-armor.yaml  yolov7-0.5-armor.yaml  yolov8-0.5-SimAM-armor.yaml  yolov8-0.5-armor.yaml
cfg/board/: shufflenet-0.5-board.yaml  yolov8-0.5-board.yaml
cfg/winmill/: shufflenet-0.5-win.yaml  shufflenet-SImAM-0.5-win.yaml  yolov8-0.5-SimAM-win.yaml
data/armor/: armor_coco.yaml  armor_detect.yaml  armor_kpt.yaml  hyp.armor.yaml
data/board/: board_detect.yaml  hyp.board.yaml
data/winmill/: hyp.win.yaml  win_kpt.yaml
models/: __init__.py  basic.py  common.py  experimental.py  yolo.py
models/Models/: mobileone.py  shufflenet.py
pre-processing_script/: change_anchor.py  change_json2yolo.py  change_label.py  change_name.py  change_point_order.py  change_yolo2coco.py  change_yolo2voc.py  change_yolo_bbox.py  change_yolo_kpt.py  combine_labels.py  copy_subdataset.py  delete_empty.py  delete_labels.py  delete_useless.py  label_count.py  label_match.py  label_show.py  red2blue.py  split_dataset.py  split_labelstudio.py
utils/: adaptive_bn.py  add_nms.py  anchor_generator.py  datasets.py  general.py  loss.py  plots.py  prune_utils.py  tal.py  torch_utils.py
